--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
                 height: 100%;
                 padding: 0%;
                 margin: 0%;
-                overflow: hidden;
+                /* overflow: hidden; */
+                -webkit-perspective:0;
+                perspective:0;
                 font-family: "Roboto", sans-serif;
             }
             pre {
