--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
         body {
             width: 100%;
             height: 100%;
-            padding: 0%;
-            margin: 0%;
-            overflow: hidden;
+            -webkit-perspective:0;
+            perspective:0;
             font-family: "Roboto", sans-serif;
+            margin:0;
+            padding:0;
         }
 
         pre {
